<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="image_by_link">Attachment for the post</string>
    <string name="extended_fab_text">New posts: %1$s</string>
    <string name="show_new_messages">Show new messages</string>
    <string name="new_post_button">New Post</string>
    <string name="take_photo_description">Take photo</string>
    <string name="pick_photo_description">Pick photo</string>
    <string name="preview_description">Preview</string>
    <string name="delete_photo_button">Delete</string>
    <string name="picture">Picture</string>
    <string name="_1_of_1">1 of 1</string>
    <string name="button_back">Button back</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="edit_hint">Write your post…</string>
    <string name="notification">Recipient ID: %1$d, content: %2$s</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">Login</string>
    <string name="some_contents_description">some_сcontents_description</string>
    <string name="OK">OK</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="entry">Entry</string>

</resources>