<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ImageViewingFragment"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >

        <ImageView
            android:id="@+id/view_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/picture"
            tools:src="@drawable/thomas_michael_shelby_009"
            >
        </ImageView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_for_picture"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconTint="@color/white"
            app:iconSize="32dp"
            android:contentDescription="@string/button_back"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:id="@+id/one_of_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="86dp"
            android:layout_marginTop="12dp"
            android:text="@string/_1_of_1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp">

        </TextView>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
