<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="56dp"

    tools:context=".activity.NewPostFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="?actionBarSize">

            <!--paddingBottom="?actionBarSize" - чтобы была видна кнопка "DELETE"-->


            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/edit_hint"
                android:inputType="textMultiLine"
                android:labelFor="@id/preview"
                android:paddingStart="@dimen/common_spacing"
                android:paddingTop="@dimen/_28dp"
                android:paddingEnd="@dimen/common_spacing"
                android:paddingBottom="@dimen/common_spacing"
                tools:text="@tools:sample/lorem[300]" />

            <FrameLayout
                android:id="@+id/previewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">
                <!--        tools:visibility="visible" - чтобы было видно работе с макетом,
                           но не при запуске -->
                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/preview_description"
                    tools:src="@tools:sample/avatars" />
                <!--    android:adjustViewBounds="true" - чтобы контент занимал всё свободное пространство-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/delete_photo_button" />
            </FrameLayout>
        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="?colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_photo_description"
            app:icon="@drawable/baseline_add_a_photo_24"
            app:iconTint="?colorOnPrimary" />
        <!--        colorOnPrimary - контрастный для Primary цвет.
        И меняется в зависимости от темы (день/ночь) -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pick_photo_description"
            app:icon="@drawable/baseline_add_photo_alternate_24"
            app:iconTint="?colorOnPrimary" />

    </LinearLayout>

    <!--    ?actionBarSize - установить фиксированный размер-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>


    <!--    <com.google.android.material.bottomappbar.BottomAppBar-->
    <!--        android:id="@+id/bottomAppBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="bottom"-->
    <!--        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"-->
    <!--        />-->
    <!--    Прошлая👆 реализация BottomAppBar (заменённый LinearLayout'ом)-->


    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/ok"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:contentDescription="@string/description_post_save"-->
    <!--        app:srcCompat="@drawable/ic_ok_24dp"-->
    <!--        app:layout_anchor="@id/bottomAppBar"-->
    <!--        />-->
    <!--    Прошлая👆 реализация кнопки FAB-->
