<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/photo_rock_1"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_in"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="88dp"
            android:hint="@string/login"
            app:boxCornerRadiusBottomEnd="50dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:errorEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_password"
            app:boxCornerRadiusBottomEnd="50dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:errorEnabled="true"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="70dp"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:text="@string/action_sign_in"
            app:cornerRadius="@dimen/_24dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="310dp"
        android:visibility="invisible" />

<Button
    android:id="@+id/snack_bar_anchor"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="bottom|center"
    android:layout_marginBottom="146dp"
    tools:ignore="VisualLintLocaleText" />

</FrameLayout>



